--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #datasource
-spring.datasource.url = jdbc:postgresql://localhost:5432/
+spring.datasource.url = jdbc:postgresql://localhost:5432/CentralDeErros
 spring.datasource.username = postgres
 spring.datasource.password = postgres
 spring.datasource.driver-class-name = org.postgresql.Driver
