--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,11 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialec
 
 jwt.secret=usersecret
 
+spring.flyway.baseline-on-migrate=true
+spring.flyway.user=postgres
+spring.flyway.password=postgres
+spring.flyway.url= jdbc:postgresql://localhost:5432/CentralDeErros
+spring.flyway.locations=classpath:db/migration
+spring.flyway.enabled=true
+
+
